--- a/arche-react/en/technical-setup.html
+++ b/arche-react/en/technical-setup.html
@@ -1,61 +1,37 @@
 
 <section>    
     <div class="container-w980 mx-auto mt-[50px]">
-        <div class="mission-container">
+        <div class="w-full ">
+            {{ element_1.intro }}      
+        </div>
+    </div>
 
-            <div class="w-full flex justify-center">
-                {{ element_1.intro }}      
+
+    <div class="container-w980 mx-auto">
+        <div class="w-full ">
+            <div class="my-12 text-center">
+                <h1 class="section-header-title" id="software-stack">
+                    {{ element_2.title }}&nbsp;<a class="anchor-link" href="{{ element_2.title_url }}" aria-label="{{ element_2.title_url_text }}">#</a>
+                </h1>
             </div>
         </div>
     </div>
 
 
-
-
-
-    <div class="w-full flex justify-center">
-        <div class="container">
-            <div class="grid grid-cols-6 gap-4">
-                <div class="col-span-4 col-start-2">
-                    <div class="w-full">
-                        <div class="my-12 text-center">
-                            <h2 class="section-header-title" id="software-stack">
-                                {{ element_2.title }}&nbsp;<a class="anchor-link" href="{{ element_2.title_url }}" aria-label="{{ element_2.title_url_text }}">#</a>
-                            </h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="container-w980 mx-auto">
+        <div class="w-full ">
+            {{ element_2.content }}
         </div>
     </div>
 
 
-    <div class="w-full flex justify-center mt-10">
-        <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-4 col-start-2">
-                <div class="w-full ">
-                    <div class="container-w980">
-                        <div class="flex flex-col gap-8">
-                            {{ element_2.content }}
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <div class="w-full flex justify-center">
-        <div class="container">
-            <div class="grid grid-cols-6 gap-4">
-                <div class="col-span-4 col-start-2">
-                    <div class="w-full">
-                        <div class="my-12 text-center">
-                            <h2 class="section-header-title" id="client-libraries">
-                                {{ element_3.title }}&nbsp;<a class="anchor-link" href="{{ element_3.title_url }}" aria-label="{{ element_3.title_url_text }}">#</a>
-                            </h2>
-                        </div>
-                    </div>
+    <div class="container-w980 mx-auto">
+        <div class="w-full ">
+            <div class="my-12 text-center">
+                <div class="my-12 text-center">
+                    <h1 class="section-header-title" id="client-libraries">
+                        {{ element_3.title }}&nbsp;<a class="anchor-link" href="{{ element_3.title_url }}" aria-label="{{ element_3.title_url_text }}">#</a>
+                    </h1>
                 </div>
             </div>
         </div>
