--- a/arche-react/en/further-guidance.html
+++ b/arche-react/en/further-guidance.html
@@ -12,11 +12,11 @@
                                     [&::-webkit-details-marker]:hidden open:text-white">
                         <span class="static-acc-title">{{ accordion_1.item_1_title }}</span>
                         <!-- chevron -->
-                        <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                        <svg class="h-4 w-4 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                         <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
                         </svg>
                     </summary>
-                    <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
+                    <div class="bg-white overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
                         <div class="p-4 pt-0 text-sm accordion-static-body">
                             {{ accordion_1.item_1_body }}
                         </div>
@@ -30,11 +30,11 @@
                                     [&::-webkit-details-marker]:hidden open:text-white">
                         <span class="static-acc-title">{{ accordion_1.item_2_title }}</span>
                         <!-- chevron -->
-                        <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                        <svg class="h-4 w-4 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                         <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
                         </svg>
                     </summary>
-                    <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
+                    <div class="bg-white overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
                         <div class="p-4 pt-0 text-sm accordion-static-body">
                             {{ accordion_1.item_2_body }}
                         </div>
@@ -48,11 +48,11 @@
                                     [&::-webkit-details-marker]:hidden open:text-white">
                         <span class="static-acc-title">{{ accordion_1.item_3_title }}</span>
                         <!-- chevron -->
-                        <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                        <svg class="h-4 w-4 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                         <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
                         </svg>
                     </summary>
-                    <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
+                    <div class="bg-white overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
                         <div class="p-4 pt-0 text-sm accordion-static-body">
                             {{ accordion_1.item_3_body }}
                         </div>
@@ -66,11 +66,11 @@
                                     [&::-webkit-details-marker]:hidden open:text-white">
                         <span class="static-acc-title">{{ accordion_1.item_4_title }}</span>
                         <!-- chevron -->
-                        <svg class="h-5 w-5 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                        <svg class="h-4 w-4 transition-transform group-open:rotate-180" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                         <path fill-rule="evenodd" d="M10 12.5a1 1 0 0 1-.7-.29l-5-5a1 1 0 1 1 1.4-1.42L10 10.09l4.3-4.3a1 1 0 1 1 1.4 1.42l-5 5a1 1 0 0 1-.7.29z" clip-rule="evenodd"/>
                         </svg>
                     </summary>
-                    <div class="overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
+                    <div class="bg-white overflow-hidden max-h-0 open:max-h-[60vh] transition-[max-height] duration-300">
                         <div class="p-4 pt-0 text-sm accordion-static-body">
                             {{ accordion_1.item_4_body }}
                         </div>
