--- a/arche-react/en/further-guidance.html
+++ b/arche-react/en/further-guidance.html
@@ -1,6 +1,6 @@
 
 
-<section class="mt-[50px] mb-[100px]">
+<section class="static-pages mt-[50px]  pt-[50px]">
     <div class="container-w980 mx-auto">
         <div class="mx-auto w-full max-w-6xl px-6">
             <div class="accordion-static col-span-full w-full">
