--- a/arche-react/en/filenames-formats-metadata.html
+++ b/arche-react/en/filenames-formats-metadata.html
@@ -1,5 +1,5 @@
 
-<section class="static-pages mt-[50px]  pt-[50px]">
+<section class="static-pages mt-[50px]">
 
 
     <div class="container-w980 mx-auto">
