--- a/arche-react/de/deposition-agreement.html
+++ b/arche-react/de/deposition-agreement.html
@@ -1,6 +1,6 @@
 <div class="static-pages">
     <section class="">
-        <div class="w-full flex justify-center mt-[50px]">
+        <div class="w-full flex justify-center pt-[50px]">
             <div class="container-w980 w-full bg-white p-[24px]">
                 <p>
                     <strong>{{ element_1.intro }}</strong>
