--- a/arche-react/en/api-access.html
+++ b/arche-react/en/api-access.html
@@ -1,5 +1,5 @@
 
-<section class="static-pages mt-[50px]  pt-[50px]">
+<section class="static-pages pt-[50px]">
 
     <div class="container-w980 mx-auto">
         <div class="mx-auto w-full max-w-6xl px-6">            
