--- a/arche-react/en/technical-setup.html
+++ b/arche-react/en/technical-setup.html
@@ -1,6 +1,6 @@
 
 <section>    
-    <div class="container-w980 mx-auto mt-[50px]">
+    <div class="container-w980 mx-auto pt-[50px]">
         <div class="w-full ">
             {{ element_1.intro }}      
         </div>
