--- a/arche-react/en/collection-policy.html
+++ b/arche-react/en/collection-policy.html
@@ -1,4 +1,4 @@
-<section class="static-pages pt-[50px]">
+<section class="pt-[50px]">
 
     <div class="container-w980 mx-auto">
         <div class="mx-auto w-full max-w-6xl px-6">
@@ -97,7 +97,7 @@
     </div>
 
     <div class="container-w980 mx-auto">
-        <div class="mx-auto w-full max-w-6xl px-6">            
+        <div class="mx-auto w-full max-w-6xl px-6 text-center">            
             {{ element_6.content }} 
         </div>
     </div>
