--- a/arche-react/en/technical-setup.html
+++ b/arche-react/en/technical-setup.html
@@ -81,23 +81,9 @@
 
 </section>
 
-<!-- CARDS -->
+<!-- cards -->
 
 
-<!-- CARDS HEADER -->
-<section class="w-full bg-white " style="margin-top: 3rem;">    
-    <div class="mx-auto w-full max-w-6xl px-6">
-        <div class="static-heading-div text-center">
-            <h1 class="section-header-title-small">
-                {{ cards.cards_header_title_small }}
-            </h1>
-            <h2 class="section-header-title" id="preservation-and-dissemination-of-digital-research-data">
-                {{ cards.cards_header_title }}
-            </h2>
-        </div>            
-    </div>
-
-</section>
 
 <!-- CARDS -->
 <section class="w-full cards-container">
