--- a/arche-react/en/collection-policy.html
+++ b/arche-react/en/collection-policy.html
@@ -130,7 +130,7 @@
 
                             <p class="contents">
                                 <a class="btn basic-arche-btn home-resources-btn" href="{{ cards.card_1_url }}">
-                                    Anzeigen
+                                    Show
                                 </a>
                             </p>
                         </div>
@@ -160,7 +160,7 @@
 
                             <p class="contents">
                                 <a class="btn basic-arche-btn home-resources-btn" href="{{ cards.card_2_url }}">
-                                    Anzeigen
+                                    Show
                                 </a>
                             </p>
                         </div>
@@ -190,7 +190,7 @@
 
                             <p class="contents">
                                 <a class="btn basic-arche-btn home-resources-btn" href="{{ cards.card_3_url }}">
-                                    Anzeigen
+                                    Show
                                 </a>
                             </p>
                         </div>
@@ -220,7 +220,7 @@
 
                             <p class="contents">
                                 <a class="btn basic-arche-btn home-resources-btn" href="{{ cards.card_4_url }}">
-                                    Anzeigen
+                                    Show
                                 </a>
                             </p>
                         </div>
