--- a/arche-react/en/privacy-policy.html
+++ b/arche-react/en/privacy-policy.html
@@ -477,7 +477,20 @@
 
 </section>
 
-<!-- cards -->
+<!-- CARDS HEADER -->
+<section class="w-full bg-white " style="margin-top: 3rem;">    
+    <div class="mx-auto w-full max-w-6xl px-6">
+        <div class="static-heading-div text-center">
+            <h1 class="section-header-title-small">
+                {{ cards.cards_header_title_small }}
+            </h1>
+            <h2 class="section-header-title" id="how-does-the-data-deposition-work">
+                {{ cards.cards_header_title }}
+            </h2>
+        </div>            
+    </div>
+
+</section>
 
 
 
