--- a/arche-react/de/collection-policy.html
+++ b/arche-react/de/collection-policy.html
@@ -102,6 +102,22 @@
         </div>
     </div>
 </section>
+
+<!-- CARDS HEADER -->
+<section class="w-full bg-white " style="margin-top: 3rem;">    
+    <div class="mx-auto w-full max-w-6xl px-6">
+        <div class="static-heading-div text-center">
+            <h1 class="section-header-title-small">
+                {{ cards.cards_header_title_small }}
+            </h1>
+            <h2 class="section-header-title" id="how-does-the-data-deposition-work">
+                {{ cards.cards_header_title }}
+            </h2>
+        </div>            
+    </div>
+
+</section>
+
 <!-- CARDS -->
 <section class="w-full cards-container">
     <div class="mx-auto w-full max-w-6xl px-6">
