--- a/arche-react/en/privacy-policy.html
+++ b/arche-react/en/privacy-policy.html
@@ -1,311 +1,166 @@
 
-<section>
+<section class="static-pages pt-[50px]">
 
-    <div class="w-full flex justify-center mt-10">
-        <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-4 col-start-2">
-                <div class="w-full ">
-                    <div class="container-w980">
-                        <div class="flex flex-col gap-8">
-                            {{ element_1.content }}      
-                        </div>
-                    </div>
-                </div>
+
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6"> 
+            {{ element_1.content }}
+        </div>
+    </div>
+
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6">
+            <div class="static-heading-div text-center">                
+                <h1 class="section-header-title" id="name-of-the-service">
+                    {{ element_2.title }}&nbsp;<a class="anchor-link" href="{{ element_2.title_url }}" aria-label="{{ element_2.title_url_text }}">#</a>
+                </h1>
             </div>
         </div>
     </div>
 
-    <div class="w-full flex justify-center">
-        <div class="container">
-            <div class="grid grid-cols-6 gap-4">
-                <div class="col-span-4 col-start-2">
-                    <div class="w-full">
-                        <div class="my-12 text-center">
-                            <h2 class="section-header-title" id="name-of-the-service">
-                                {{ element_2.title }}&nbsp;<a class="anchor-link" href="{{ element_2.title_url }}" aria-label="{{ element_2.title_url_text }}">#</a>
-                            </h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6"> 
+            {{ element_2.content }}
         </div>
     </div>
 
 
-    <div class="w-full flex justify-center mt-10">
-        <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-4 col-start-2">
-                <div class="w-full ">
-                    <div class="container-w980">
-                        <div class="flex flex-col gap-8">
-                            {{ element_2.content }}
-                        </div>
-                    </div>
-                </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6">
+            <div class="static-heading-div text-center">                
+                <h1 class="section-header-title" id="description-of-the-service">
+                    {{ element_3.title }}&nbsp;<a class="anchor-link" href="{{ element_3.title_url }}" aria-label="{{ element_3.title_url_text }}">#</a>
+
+                </h1>
             </div>
         </div>
     </div>
 
-
-    <div class="w-full flex justify-center">
-        <div class="container">
-            <div class="grid grid-cols-6 gap-4">
-                <div class="col-span-4 col-start-2">
-                    <div class="w-full">
-                        <div class="my-12 text-center">
-                            <h2 class="section-header-title" id="description-of-the-service">
-                                {{ element_3.title }}&nbsp;<a class="anchor-link" href="{{ element_3.title_url }}" aria-label="{{ element_3.title_url_text }}">#</a>
-
-                            </h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6"> 
+            {{ element_3.content }}
         </div>
     </div>
 
 
-    <div class="w-full flex justify-center mt-10">
-        <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-4 col-start-2">
-                <div class="w-full ">
-                    <div class="container-w980">
-                        <div class="flex flex-col gap-8">
-                            {{ element_3.content }}
-                        </div>
-                    </div>
-                </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6">
+            <div class="static-heading-div text-center">                
+                <h1 class="section-header-title" id="personal-data-processed">
+                    {{ element_4.title }}&nbsp;<a class="anchor-link" href="{{ element_4.title_url }}" aria-label="{{ element_4.title_url_text }}">#</a>
+                </h1>
             </div>
         </div>
     </div>
 
-
-
-
-    <div class="w-full flex justify-center">
-        <div class="container">
-            <div class="grid grid-cols-6 gap-4">
-                <div class="col-span-4 col-start-2">
-                    <div class="w-full">
-                        <div class="my-12 text-center">
-                            <h2 class="section-header-title" id="personal-data-processed">
-                                {{ element_4.title }}&nbsp;<a class="anchor-link" href="{{ element_4.title_url }}" aria-label="{{ element_4.title_url_text }}">#</a>
-                            </h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6"> 
+            {{ element_4.content }}
         </div>
     </div>
 
 
-    <div class="w-full flex justify-center mt-10">
-        <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-4 col-start-2">
-                <div class="w-full ">
-                    <div class="container-w980">
-                        <div class="flex flex-col gap-8">
-                            {{ element_4.content }}
-                        </div>
-                    </div>
-                </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6">
+            <div class="static-heading-div text-center">                
+                <h1 class="section-header-title" id="purpose-of-the-processing-of-personal-data">
+                    {{ element_5.title }}&nbsp;<a class="anchor-link" href="{{ element_5.title_url }}" aria-label="{{ element_5.title_url_text }}">#</a>
+                </h1>
             </div>
         </div>
     </div>
 
-
-    <div class="w-full flex justify-center">
-        <div class="container">
-            <div class="grid grid-cols-6 gap-4">
-                <div class="col-span-4 col-start-2">
-                    <div class="w-full">
-                        <div class="my-12 text-center">
-                            <h2 class="section-header-title" id="purpose-of-the-processing-of-personal-data">
-                                {{ element_5.title }}&nbsp;<a class="anchor-link" href="{{ element_5.title_url }}" aria-label="{{ element_5.title_url_text }}">#</a>
-                            </h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6"> 
+            {{ element_5.content }}
         </div>
     </div>
 
 
-    <div class="w-full flex justify-center mt-10">
-        <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-4 col-start-2">
-                <div class="w-full ">
-                    <div class="container-w980">
-                        <div class="flex flex-col gap-8">
-                            {{ element_5.content }}
-                        </div>
-                    </div>
-                </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6">
+            <div class="static-heading-div text-center">                
+                <h1 class="section-header-title" id="cookies">
+                    {{ element_6.title }}&nbsp;<a class="anchor-link" href="{{ element_6.title_url }}" aria-label="{{ element_6.title_url_text }}">#</a>
+                </h1>
             </div>
         </div>
     </div>
 
-
-
-    <div class="w-full flex justify-center">
-        <div class="container">
-            <div class="grid grid-cols-6 gap-4">
-                <div class="col-span-4 col-start-2">
-                    <div class="w-full">
-                        <div class="my-12 text-center">
-                            <h2 class="section-header-title" id="cookies">
-                                {{ element_6.title }}&nbsp;<a class="anchor-link" href="{{ element_6.title_url }}" aria-label="{{ element_6.title_url_text }}">#</a>
-                            </h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6"> 
+            {{ element_6.content }}
         </div>
     </div>
 
 
-    <div class="w-full flex justify-center mt-10">
-        <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-4 col-start-2">
-                <div class="w-full ">
-                    <div class="container-w980">
-                        <div class="flex flex-col gap-8">
-                            {{ element_6.content }}
-                        </div>
-                    </div>
-                </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6">
+            <div class="static-heading-div text-center">                
+                <h1 class="section-header-title" id="matomo">
+                    {{ element_7.title }}&nbsp;<a class="anchor-link" href="{{ element_7.title_url }}" aria-label="{{ element_7.title_url_text }}">#</a>
+
+                </h1>
             </div>
         </div>
     </div>
 
-
-    <div class="w-full flex justify-center">
-        <div class="container">
-            <div class="grid grid-cols-6 gap-4">
-                <div class="col-span-4 col-start-2">
-                    <div class="w-full">
-                        <div class="my-12 text-center">
-                            <h2 class="section-header-title" id="matomo">
-                                {{ element_7.title }}&nbsp;<a class="anchor-link" href="{{ element_7.title_url }}" aria-label="{{ element_7.title_url_text }}">#</a>
-
-                            </h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6"> 
+            {{ element_7.content }}
         </div>
     </div>
 
 
-    <div class="w-full flex justify-center mt-10">
-        <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-4 col-start-2">
-                <div class="w-full ">
-                    <div class="container-w980">
-                        <div class="flex flex-col gap-8">
-                            {{ element_7.content }}
-                        </div>
-                    </div>
-                </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6">
+            <div class="static-heading-div text-center">                
+                <h1 class="section-header-title" id="opting-out-of-website-tracking">
+                    {{ element_8.title }}&nbsp;<a class="anchor-link" href="{{ element_8.title_url }}" aria-label="{{ element_8.title_url_text }}">#</a>
+                </h1>
             </div>
         </div>
     </div>
 
-
-    <div class="w-full flex justify-center">
-        <div class="container">
-            <div class="grid grid-cols-6 gap-4">
-                <div class="col-span-4 col-start-2">
-                    <div class="w-full">
-                        <div class="my-12 text-center">
-                            <h2 class="section-header-title" id="opting-out-of-website-tracking">
-                                {{ element_8.title }}&nbsp;<a class="anchor-link" href="{{ element_8.title_url }}" aria-label="{{ element_8.title_url_text }}">#</a>
-                            </h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6"> 
+            {{ element_8.content }}
         </div>
     </div>
 
 
-    <div class="w-full flex justify-center mt-10">
-        <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-4 col-start-2">
-                <div class="w-full ">
-                    <div class="container-w980">
-                        <div class="flex flex-col gap-8">
-                            {{ element_8.content }}
-                        </div>
-                    </div>
-                </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6">
+            <div class="static-heading-div text-center">                
+                <h1 class="section-header-title" id="third-parties-to-whom-personal-data-is-disclosed">
+                    {{ element_9.title }}&nbsp;<a class="anchor-link" href="{{ element_9.title_url }}" aria-label="{{ element_9.title_url_text }}">#</a>
+                </h1>
             </div>
         </div>
     </div>
 
-
-    <div class="w-full flex justify-center">
-        <div class="container">
-            <div class="grid grid-cols-6 gap-4">
-                <div class="col-span-4 col-start-2">
-                    <div class="w-full">
-                        <div class="my-12 text-center">
-                            <h2 class="section-header-title" id="third-parties-to-whom-personal-data-is-disclosed">
-                                {{ element_9.title }}&nbsp;<a class="anchor-link" href="{{ element_9.title_url }}" aria-label="{{ element_9.title_url_text }}">#</a>
-                            </h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <div class="w-full flex justify-center mt-10">
-        <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-4 col-start-2">
-                <div class="w-full ">
-                    <div class="container-w980">
-                        <div class="flex flex-col gap-8">
-                            {{ element_9.content }}
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6"> 
+            {{ element_9.content }}
         </div>
     </div>
 
 
 
 
-    <div class="w-full flex justify-center">
-        <div class="container">
-            <div class="grid grid-cols-6 gap-4">
-                <div class="col-span-4 col-start-2">
-                    <div class="w-full">
-                        <div class="my-12 text-center">
-                            <h2 class="section-header-title" id="security">
-                                {{ element_10.title }}&nbsp;<a class="anchor-link" href="{{ element_10.title_url }}" aria-label="{{ element_10.title_url_text }}">#</a>
-                            </h2>
-                        </div>
-                    </div>
-                </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6">
+            <div class="static-heading-div text-center">                
+                <h1 class="section-header-title" id="security">
+                    {{ element_10.title }}&nbsp;<a class="anchor-link" href="{{ element_10.title_url }}" aria-label="{{ element_10.title_url_text }}">#</a>
+                </h1>
             </div>
         </div>
     </div>
 
-
-    <div class="w-full flex justify-center mt-10">
-        <div class="grid grid-cols-6 gap-4">
-            <div class="col-span-4 col-start-2">
-                <div class="w-full ">
-                    <div class="container-w980">
-                        <div class="flex flex-col gap-8">
-                            {{ element_10.content }}
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="container-w980 mx-auto">
+        <div class="mx-auto w-full max-w-6xl px-6"> 
+            {{ element_10.content }}
         </div>
     </div>
 
